--| Update description and add a favicon |--

--- a/index.html
+++ b/index.html
@@ -2,11 +2,30 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/Bg.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="https://unpkg.com/transition-style/transition.circles.min.css"> -->
     <meta name="author" content="JavssMarC" />
-    <title>Portafolio de Javi</title>
+    <!-- Primary Meta Tags -->
+<title>JJMC</title>
+<meta name="title" content="JJMC" />
+<meta name="description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://jjaviermc.netlify.app/" />
+<meta property="og:title" content="JJMC" />
+<meta property="og:description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://jjaviermc.netlify.app/" />
+<meta property="twitter:title" content="JJMC" />
+<meta property="twitter:description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+
   </head>
   <body>
     <div id="root"></div>
