--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!doctype html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/Bg.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="https://unpkg.com/transition-style/transition.circles.min.css"> -->
-    <meta name="author" content="JavssMarC" />
-    <!-- Primary Meta Tags -->
-<title>JJMC</title>
-<meta name="title" content="JJMC" />
-<meta name="description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
 
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://jjaviermc.netlify.app/" />
-<meta property="og:title" content="JJMC" />
-<meta property="og:description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/public/Bg.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- <link rel="stylesheet" href="https://unpkg.com/transition-style/transition.circles.min.css"> -->
+  <meta name="author" content="JavssMarC" />
+  <!-- Primary Meta Tags -->
+  <title>JJMC</title>
+  <meta name="title" content="JJMC" />
+  <meta name="description"
+    content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
 
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image" />
-<meta property="twitter:url" content="https://jjaviermc.netlify.app/" />
-<meta property="twitter:title" content="JJMC" />
-<meta property="twitter:description" content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://jjaviermc.netlify.app/" />
+  <meta property="og:title" content="JJMC" />
+  <meta property="og:description"
+    content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
+  <meta property="og:image" content="https://drive.google.com/uc?export=download&id=1FUbSr9IVLhz4xjZc9XFaHf_UPDcCXytI" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://jjaviermc.netlify.app/" />
+  <meta property="twitter:title" content="JJMC" />
+  <meta property="twitter:description"
+    content="¡Saludos! Soy Javier, el alquimista digital que transforma visiones en realidad. Mi magia radica en traducir diseños en líneas de código con tecnologías web vanguardistas como React. Descubre cómo la inteligencia artificial se entrelaza con mi arte digital para dar vida a tus proyectos en la web." />
+  <meta property="twitter:image" content="https://drive.google.com/uc?export=download&id=1FUbSr9IVLhz4xjZc9XFaHf_UPDcCXytI" />
 
 
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
 </html>
